; ModuleID = '/home/carl/AnghaBench/git/extr_convert.c_get_wt_convert_stats_ascii.c'
source_filename = "/home/carl/AnghaBench/git/extr_convert.c_get_wt_convert_stats_ascii.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32, i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_wt_convert_stats_ascii(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.strbuf, align 4
  store i8* %0, i8** %2, align 8
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  %5 = bitcast %struct.strbuf* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %5, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %6 = load i8*, i8** %2, align 8
  %7 = call i64 @strbuf_read_file(%struct.strbuf* %4, i8* %6, i32 0)
  %8 = icmp sge i64 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %4, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %4, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i8* @gather_convert_stats_ascii(i32 %11, i32 %13)
  store i8* %14, i8** %3, align 8
  br label %15

15:                                               ; preds = %9, %1
  %16 = call i32 @strbuf_release(%struct.strbuf* %4)
  %17 = load i8*, i8** %3, align 8
  ret i8* %17
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @strbuf_read_file(%struct.strbuf*, i8*, i32) #2

declare dso_local i8* @gather_convert_stats_ascii(i32, i32) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
